--- a/NWBA/NWBA/AddExamplesWindow.xaml
+++ b/NWBA/NWBA/AddExamplesWindow.xaml
@@ -1,9 +1,9 @@
 ﻿<Window x:Class="NWBA.AddExamplesWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Add Examples"         
+        Title="Add Examples"  
         WindowStartupLocation="CenterScreen"
-        Height="300" Width="300"
+        Height="500" Width="600"
         >
     <Grid Margin="10">
         <Grid.RowDefinitions>
@@ -14,19 +14,30 @@
 
         <!-- Row 0 -->
         <TextBlock Grid.Row="0"
-                   Text="Loaded Examples"
+                   Text="Loaded Examples:"
                    />
         <!-- EndRow 0 -->
 
         <!-- Row 1 -->
-        <ItemsControl>
-            <ControlTemplate>
-                <StackPanel Orientation="Horizontal">
-                    <CheckBox />
-                    <TextBlock Text="{Binding Path=Sentence}" />
-                </StackPanel>
-            </ControlTemplate>
-        </ItemsControl>
+        <ScrollViewer Grid.Row="1"
+                      VerticalScrollBarVisibility="Auto"  
+                      >
+            <ItemsControl x:Name="icExamples">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <CheckBox IsChecked="{Binding Path=IsSelectedIn, Mode=TwoWay}" 
+                                  Margin="0,10,0,0"
+                                  Checked="Sentence_Checked"
+                                  Unchecked="Sentence_Unchecked"
+                                  >
+                            <TextBlock Text="{Binding Path=Sentence, Mode=TwoWay}" 
+                                       TextWrapping="Wrap"
+                                       />
+                        </CheckBox>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </ScrollViewer>
         <!-- EndRow 1 -->
         
         <!-- Row 2 -->
@@ -46,6 +57,12 @@
                     Content="Save"
                     Width="100"
                     Click="cmdSaveExamples_Click"
+                    />
+            <Button x:Name="cmdCancel"
+                    Margin="5,0,0,0"
+                    Content="Cancel"
+                    Width="100"
+                    Click="cmdCancel_Click"
                     />
         </StackPanel>
         <!-- EndRow 2 -->
